[package]
name = "portop"
version = "0.1.0"
edition = "2021"
description = "TUI for managing open ports and associated processes"

[[bin]]
name = "portop"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
crossterm = "0.28"
libc = "0.2"
ratatui = "0.29"
unicode-width = "0.2"
